# myZemax

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  PLUGINS.md  README.md
include/raytracer/: camera.hpp  object.hpp  objects.hpp  ray.hpp  raytracer.hpp  scene.hpp  vec3.hpp
include/ui/: add_object_dialog.hpp  application.hpp  control_panel.hpp  draw_overlay.hpp  main_window.hpp  objects_panel.hpp  properties_window.hpp  raytracer_window.hpp  toolbar.hpp
plugins/: README.md
plugins/backend/: .gitkeep
plugins/tools/: .gitkeep
src/: application.cpp  main.cpp
src/ui/: add_object_dialog.cpp  control_panel.cpp  draw_overlay.cpp  main_window.cpp  objects_panel.cpp  properties_window.cpp  raytracer_window.cpp  toolbar.cpp
